--- a/EDA/unicorn_companies_eda.ipynb
+++ b/EDA/unicorn_companies_eda.ipynb
@@ -2731,10 +2731,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Changing the values in valuation to match the format of Total Raised\n",
+    "\n",
+    "def apply_scale(value):\n",
+    "    if pd.isna(value):\n",
+    "        return np.nan\n",
+    "\n",
+    "    return (value) * 1e9\n",
+    "\n",
+    "df[\"Valuation ($B)\"] = df[\"Valuation ($B)\"].apply(apply_scale)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6166490018229984"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Valuation ($B)'].corr(df['Total Raised'])"
+   ]
   }
  ],
  "metadata": {
